base/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: argo-rollouts-demo-fe-service-external
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: argo-rollouts-demo-fe-service.demo.svc.cluster.local
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-rollouts-demo-ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argo-rollouts-demo-fe-service-external
            port:
              number: 80
